# zyznt

./: README.md  pyproject.toml  zyznt.py
api/: admin.py  agent.py  agentapi.py  bi.py  logon.py  rag.py
conf/: cd.json  verify.txt
data/: data.py
db/: cd.json  mdb.py  mv.py  my.py  rdb.py  sa.py  zyredis.py
docker/: Dockerfile.backend  Dockerfile.frontend
docker/file/: conf.txt  env.production  zyzntweb.conf
file/zy001/rag123/: 1745479128.xlsx  zydict.csv  卓越3月份账单.xlsx  卓越平台售后手册.pptx  对接数据.txt  帐号管理操作手册.docx
file/zy001/rag1745581780067/: 逻辑试题 -带答案.txt
mod/: agent_run.py  file.py  flow_mod.py  llm.py  textsplit.py  tool.py  zymcp.py
mod/file2text/: file2text.py
test/: 1.py
zyznt-docker/: docker-compose.yml
zyznt-docker/file/: conf.txt
